--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-md-3 col-8">
                     <!--logo start-->
                     <a href="index.html" class="logo">
-                        <img src="img/logo.png" class="img-fluid" alt="">
+                        <img src="https://i.imgur.com/7lDjeF3.jpg" class="img-fluid" alt="">
                     </a>
                     <!--logo end-->
                 </div>
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 mt_30">
-                    <h6 class="text-white">Never overpay</h6>
+                    <h6 class="text-white">What goes here</h6>
                     <h1 class="text-white">Rent or Buy Shipping Containers for Unbeatable Prices&nbsp;&nbsp; <span class="underline-swish">&nbsp;</span> </h1>
                     <a class="appbtn" href="#">&nbsp; &nbsp; &nbsp; What goes here?&nbsp;</a>
                 </div>
@@ -142,7 +142,7 @@
     <div class="step_area">
         <div class="container text-center">
             <h3 class="section-title">
-                ContainerDiscounts makes it as easy as <strong>1-2-3</strong>
+                Why Choose Vault Containers?</strong>
             </h3>
 
             <div class="row">
@@ -157,7 +157,7 @@
                 <div class="col-md-4 step step2 mt_40" data-aos="fade-up" data-aos-delay="100">
                     <img src="https://i.imgur.com/XxhZ3dx.png" alt="">
                     <h3>
-                        <span class="counter">2.</span>
+                        <span class="counter"></span>
                         Safe and Secure
                     </h3>
                     <p>We accept safe and protected payment methods such as Credit Cards and Paypal.</p>
@@ -165,15 +165,15 @@
                 <div class="col-md-4 step step3 mt_40" data-aos="fade-up" data-aos-delay="200">
                     <img src="img/icon-step3.svg" alt="">
                     <h3>
-                        <span class="counter">3.</span>
-                        Schedule Delivery &amp; Pay
+                        <span class="counter"></span>
+                        The Best Prices
                     </h3>
-                    <p>2-5 day delivery guaranteed to your door</p>
+                    <p>Vault Containers always offers the best local prices so you can be sure you're getting the best rate available.</p>
                 </div>
             </div>
             <div>
                 <a href="#" class="btn btn-lg btn-primary" data-aos="fade-up" data-aos-delay="300">
-                    Configure &amp; Price
+                    What goes here?
                 </a>
             </div>
         </div>
@@ -188,10 +188,10 @@
                     <img src="img/certified-badge_new.png" class="img-fluid certified_img" alt="">
                 </div>
                 <div class="col-lg-4 mt_30">
-                    <h2><span>Our Containers are</span> Certified Ready-to-Sell</h2>
+                    <h2><span>Our Containers are</span> Alway Exceed "Storage" quality.</h2>
                 </div>
                 <div class="col-lg-4 mt_30">
-                    <p>Every container includes a condition guarantee that the container will meet or exceed our product quality standards. More about our <a href="#">Condition Guarantee</a>.</p>
+                    <p>Vault Containers always exceed the industry standard for quality and condition. Our containers are actually internationally certified!</a>.</p>
                 </div>
             </div>
         </div>
@@ -208,9 +208,9 @@
                     <div class="item">
                         <img src="img/newused.png" class="logo-sticker" alt="">
                         <div class="item-content">
-                            <img src="img/img1.png" class="item-picture" alt="">
+                            <img src="https://i.imgur.com/pRSHDIu.png" class="item-picture" alt="">
                             <h3 class="item-heading">
-                                10<sup>ft</sup>
+                                20<sup>ft</sup>
                             </h3>
                             <div>
                                 <p class="text-center">
@@ -229,9 +229,9 @@
                         <img src="img/newused.png" class="logo-sticker" alt="">
                         <img src="img/icon-most-popular.svg" class="corner-ribbon" alt="">
                         <div class="item-content">
-                            <img src="img/img2.png" class="item-picture" alt="">
+                            <img src="https://i.imgur.com/imVYLRb.png" class="item-picture" alt="">
                             <h3 class="item-heading">
-                                20<sup>ft</sup>
+                                40<sup>ft Standard</sup>
                             </h3>
                             <div>
                                 <p class="text-center">
@@ -249,9 +249,9 @@
                     <div class="item">
                         <img src="img/newused.png" class="logo-sticker" alt="">
                         <div class="item-content">
-                            <img src="img/img3.png" class="item-picture" alt="">
+                            <img src="https://i.imgur.com/HqW5ETy.png" class="item-picture" alt="">
                             <h3 class="item-heading">
-                                40<sup>ft</sup>
+                                40<sup>ft High Cube</sup>
                             </h3>
                             <div>
                                 <p class="text-center">
@@ -294,20 +294,20 @@
         <div class="col-lg-6 sticky-top px-0 align-self-start">
             <div class="bg_box">
                 <div class="pin-inner">
-                    <h2><strong>Don't</strong> buy  just any container</h2>
+                    <h2><strong>Don't</strong> pay upfront until you've got your container!</h2>
                 </div>
                 <div class="pin-nav">
                     <ul class="nav" id="scroll_box">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#item1">Get the Right Container Condition</a></li>
+                            <a class="nav-link active" href="#item1">1. Select Your Container Size and Condition</a></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#item2">New (1 Trip)</a>
+                            <a class="nav-link" href="#item2">2. Select Delivery Date</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#item3">Cargo Worthy</a>
+                            <a class="nav-link" href="#item3">3. Pay Deposit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#item4">Wind &amp; Water Tight</a>
+                            <a class="nav-link" href="#item4">4. Your Container is Delivered</a>
                         </li>
                     </ul>
                 </div>
@@ -398,7 +398,7 @@
                         <h3>BUYING YOUR FIRST CONTAINER?</h3>
                     </div>
                     <div class="offer-btn">
-                        <a href="#" class="btn btn-lg btn-primary">Shipping Containers 101</a>
+                        <a href="#" class="btn btn-lg btn-primary">We're Here to Help!</a>
                     </div>
                 </div>
             </div>
@@ -413,37 +413,24 @@
                     <div class="mt_30 logo_content">
                         <div class="footer_logo">
                             <a href="index.html">
-                                <img src="img/footer_logo.png" class="img-fluid" alt="">
+                                <img src="https://i.imgur.com/7lDjeF3.jpg" width="100" height="auto"  alt="">
                             </a>
                         </div>
-                        <ul class="social_links">
-                            <li>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fab fa-vimeo-v"></i></a>
-                            </li>
-                        </ul>
+
 </div>      
                     <ul class="footer_menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Generate Price Quote</a></li>
-                        <li><a href="#">Price Alerts</a></li>
-                        <li><a href="#">Container Condition Guarantee</a></li>
+                        <li><a >FAQS</a></li>
+                        <li><a href="#">Will my container smell like poop?</a></li>
+                        <li><a href="#">Will the doors fucking work?</a></li>
+                        <li><a href="#">My forklift fell through the floor</a></li>
                     </ul>
                     <ul class="footer_menu">
-                        <li><a href="#">Configure &amp; Price</a></li>
-                        <li><a href="#">Shop New</a></li>
-                        <li><a href="#">Shop Used</a></li>
-                        <li><a href="#">Inventory Locations</a></li>
-                        <li><a href="#">View Cart</a></li>
-                        <li><a href="#">Order Status</a></li>
+                        <li><a>Who We Are&nbsp;</a></li>
+                        <li><a href="#">The Vault Story</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+
                     </ul>
                 </div>
             </div>
@@ -452,11 +439,11 @@
         <div class="footer_middle">
             <div class="container text-center">
                 <p>
-                    <a href="mailto:info@containerdiscounts.com">Contact</a>
+                    <a href="mailto:info@vaultco.ca">Contact</a>
                     |
-                    <a href="mailto:info@containerdiscounts.com">info@containerdiscounts.com</a>
+                    <a href="mailto:info@vaultco.ca">info@vaultco.ca</a>
                     |
-                    (888) 259-3082
+                    (647)-494-1960
                 </p>
             </div>
         </div>
@@ -471,7 +458,7 @@
                         </p>
                     </div>
                     <div class="col-md-7 mt_20 order-md-1">
-                        <p class="copyright">© Copyright 2020 containerdiscounts.com</p>
+                        <p class="copyright">© Copyright 2022 vaultco.ca</p>
                     </div>
                 </div>
             </div>
