updated the contact form

--- a/index.html
+++ b/index.html
@@ -67,73 +67,7 @@
                     <a class="appbtn" href="#">&nbsp; &nbsp; &nbsp; What goes here?&nbsp;</a>
                 </div>
                 <div class="col-lg-5 mt_30">
-                    <div class="hero_box">
-                        <h3>
-                        Let us know what size and condition you are looking for! </h3>
-                        <form>
-                          <p class="form-message"></p>
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <span class="label">Container Size (We have High Cubes !)</span>
-                                    <div class="radio_group">
-                                        <div class="radio_item">
-                                            <input value="10 ft container" type="radio" name="cs" id="inp1">
-                                            <label for="inp1">
-                                                <strong>20 ft</strong> container
-                                            </label>
-                                      </div>
-                                        <div class="radio_item">
-                                            <input value="20 ft container" type="radio" name="cs" id="inp2">
-                                            <label for="inp2">
-                                                <strong>40 ft</strong> container
-                                            </label>
-                                        </div>
-                                        <div class="radio_item">
-                                            <input value="40 ft container" type="radio" name="cs" id="inp3">
-                                            <label for="inp3">
-                                                <strong>Something else?</strong> Well reach out!<br>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <small class="radio_button_container_error"></small>
-                                </div>
-                                <div class="col-sm-5">
-                                    <span class="label">Container Condition</span>
-                                    <div class="radio_group">
-                                        <div class="radio_item">
-                                            <input value="New" type="radio" name="cc" id="inp4">
-                                            <label for="inp4">
-                                                <strong>New</strong>
-                                            </label>
-                                        </div>
-                                        <div class="radio_item">
-                                            <input value="Used" type="radio" name="cc" id="inp5">
-                                            <label for="inp5">
-                                                <strong>Used</strong>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <small class="radio_button_condition_error"></small>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="input_group for-error">
-                                        <label for="name">Enter your Name</label>
-                                        <input id="name" type="text" placeholder="Enter your Name">
-                                        <small>Name is required</small>
-                                    </div>  
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="input_group for-error">
-                                        <label for="email">Enter your Email</label>
-                                        <input id="email" type="email" placeholder="Enter your Email">
-                                        <small>Email is required</small>
-                                    </div>
-                                </div>
-                            </div>  
-                            <button type="submit" id="contactForm" class="btn btn-primary">
-                            Submit&nbsp; </button>                        
-                        </form>
-                    </div>
+<div class="powr-contact-form" id="d528a223_1657512149"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
                 </div>
             </div>
         </div>
