--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
     <!-- Preloader Start -->
     <div id="preloader">
         <div class="loader3">
-            <span></span>
-            <span></span>
         </div>
     </div>
 
@@ -44,7 +42,7 @@
                 </div>
                 <div class="col-md-9 col-4 text-right">
                     <a href="#" class="cart">
-                        <img src="img/cart.svg" class="img-fluid" alt="">
+                        <h1>Call 647-494-1960 To Place your Order Today!</h1>
                     </a>
                     <!--<button class="nav-toggle btn btn-primary">
                         Menu <i class="fa fa-bars"></i>
@@ -62,12 +60,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 mt_30">
-                    <h6 class="text-white">What goes here</h6>
+                    <h6 class="text-white">We're Canada's Shipping Container Specialists!</h6>
                     <h1 class="text-white">Rent or Buy Shipping Containers for Unbeatable Prices&nbsp;&nbsp; <span class="underline-swish">&nbsp;</span> </h1>
                     <a class="appbtn" href="#">&nbsp; &nbsp; &nbsp; What goes here?&nbsp;</a>
                 </div>
+                <div class="col-lg-5 mt_30">
 <div class="powr-contact-form" id="d528a223_1657512149"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
-
+                </div>
             </div>
         </div>
     </div>
@@ -121,10 +120,10 @@
                     <img src="img/certified-badge_new.png" class="img-fluid certified_img" alt="">
                 </div>
                 <div class="col-lg-4 mt_30">
-                    <h2><span>Our Containers are</span> Alway Exceed "Storage" quality.</h2>
+                    <h2><span>Our Containers</span> Alway Exceed The Industry Standard&nbsp;&nbsp;</h2>
                 </div>
                 <div class="col-lg-4 mt_30">
-                    <p>Vault Containers always exceed the industry standard for quality and condition. Our containers are actually internationally certified!</a>.</p>
+                    <p>Vault Shipping Containers always exceed the industry standard in storage condition and quality.</p>
                 </div>
             </div>
         </div>
@@ -133,8 +132,8 @@
     <div class="price_area">
         <div class="container">
             <div class="section-heading text-center">
-                <h2>Price a New or Used Container</h2>
-                <p>Pick a container you like. Get a price you love. Pick a size. <a href="#">See all sizes</a></p>
+                <h2>Our Most Popular Containers&nbsp;&nbsp;</h2>
+                <p>Choose from our best sellers, or contact us for specialty sizing and options.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
             </div>
             <div class="row mt_55 justify-content-center">
                 <div class="col-lg-4 col-md-9 mt_70" data-aos="fade-up">
@@ -151,8 +150,8 @@
                                 </p>
                             </div>
                             <div class="text-center">
-                                <a href="#" class="btn btn-lg btn-primary">Shop</a> 
-                                <a href="#" class="btn btn-lg btn-default">Learn</a>
+                                <a href="https://www.powr.io/contact-form/i/32885053#page" class="btn btn-lg btn-primary">Shop Now</a> 
+
                             </div>
                         </div>
                     </div>
@@ -172,151 +171,24 @@
                                 </p>
                             </div>
                             <div class="text-center">
-                                <a href="#" class="btn btn-lg btn-primary">Shop</a> 
-                                <a href="#" class="btn btn-lg btn-default">Learn</a>
+                                <a href="https://www.powr.io/contact-form/i/32885053#page" class="btn btn-lg btn-primary">shop now</a> 
+
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-9 mt_70" data-aos="fade-up" data-aos-delay="200">
-                    <div class="item">
-                        <img src="img/newused.png" class="logo-sticker" alt="">
-                        <div class="item-content">
-                            <img src="https://i.imgur.com/HqW5ETy.png" class="item-picture" alt="">
-                            <h3 class="item-heading">
-                                40<sup>ft High Cube</sup>
-                            </h3>
-                            <div>
-                                <p class="text-center">
-                                    <span>from $1850 - $6300</span>
-                                </p>
-                            </div>
-                            <div class="text-center">
-                                <a href="#" class="btn btn-lg btn-primary">Shop</a> 
-                                <a href="#" class="btn btn-lg btn-default">Learn</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- middleman area -->
-    <div class="middleman_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 mt_25">
-                    <h2>Ahead of the middleman</h2>
-                    <p>Container Discounts is an industry-leading<strong>Tier-1 Supplier</strong>, selling direct to both companies &amp; individuals.</p>
-                    <p>Our customers enjoy unrivaled real-time inventory,<strong>supplier-direct pricing</strong>, and every container is<strong>&nbsp;certified ready-to-sell</strong>and backed by our&nbsp;<strong>certification guarantee</strong>.</p>
-                    <p>Pick a container you like, and we’ll get you<strong>a price you’ll love</strong>.</p>
-                  <a href="#" class="btn btn-primary">Get Started</a>
-                </div>
-                <div class="col-lg-6 mt_25">
-                    <h3>Buy Direct &amp; Save <span>up to 20%</span></h3>
-                    <img src="img/graph.svg" class="img-fluid graph_img" alt="">
-                    <div>
-                        <a href="#" class="btn btn-primary">Get Price Alerts</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- sticky area -->
-    <div class="sticky_area">
-        <div class="col-lg-6 sticky-top px-0 align-self-start">
-            <div class="bg_box">
-                <div class="pin-inner">
-                    <h2><strong>Don't</strong> pay upfront until you've got your container!</h2>
-                </div>
-                <div class="pin-nav">
-                    <ul class="nav" id="scroll_box">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#item1">1. Select Your Container Size and Condition</a></li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#item2">2. Select Delivery Date</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#item3">3. Pay Deposit</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#item4">4. Your Container is Delivered</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="sticky-content col-lg-6 px-0">
-            <div id="item1" class="row justify-content-center no-gutters">
-                <div class="col-md-8 col-sm-10 section text_widget">
-                    <h3 class="heading">Get the Right Container Condition</h3>
-                    <p class="p1"><span>Are you worried about selecting the right container? Well the choice is all about <strong>conditions</strong>.&nbsp;</span>Our Shipping Containers are <a href="/certified-ready-to-sell">certified</a>&nbsp;<strong>ready for sale.&nbsp;</strong>The units have been inspected, cleaned and prepped for delivery. Scroll down to see your best options.</p>
-                    <h4 class="p1">WATCH &amp; LEARN ALL ABOUT CONDITIONS &amp; PRICING</h4>
-                    <div class="video_box">
-                        <iframe allow="autoplay; fullscreen; picture-in-picture; camera; microphone; display-capture" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" aria-label="Vidyard video player" class="vidyard-iframe-xVY7JuwKYrg9NaxiYGvfAT" src="https://play.vidyard.com/xVY7JuwKYrg9NaxiYGvfAT?disable_popouts=1&amp;v=4.2.30&amp;viral_sharing=0&amp;embed_button=0&amp;hide_playlist=1&amp;color=FFFFFF&amp;playlist_color=FFFFFF&amp;play_button_color=2A2A2A&amp;gdpr_enabled=1&amp;type=inline&amp;autoplay=0&amp;loop=0&amp;muted=0&amp;hidden_controls=0&amp;pomo=2&amp;vydata%5Butk%5D=e3145c197071de81b4d9e0fed2569f2c&amp;vydata%5Bportal_id%5D=2863783&amp;vydata%5Bhs_original_external_id%5D=&amp;vydata%5Bhs_original_external_uuid%5D=&amp;vydata%5Bcontent_type%5D=standard-page&amp;vydata%5Bcanonical_url%5D=https%3A%2F%2Fwww.containerdiscounts.com&amp;vydata%5Bpage_id%5D=5831695617&amp;vydata%5Bcontent_page_id%5D=5831695617&amp;vydata%5Blegacy_page_id%5D=5831695617&amp;vydata%5Bcontent_folder_id%5D=null&amp;vydata%5Bcontent_group_id%5D=null&amp;vydata%5Bab_test_id%5D=null&amp;vydata%5Blanguage_code%5D=null" title="Vidyard video player"></iframe>
-                    </div>
-                </div>
-            </div>
-            <div id="item2" class="row justify-content-center no-gutters align-items-center section" style="background-image: url(img/bg1.webp);">
-                <div class="col-md-8 col-sm-10 card_box">
-                    <h3 class="heading">New (1 Trip)</h3>
-                    <div>
-                        <img src="img/c1.png" alt="">
-                    </div>
-                    <ul>
-                        <li>Nearly New</li>
-                        <li>Perfect Seals</li>
-                        <li>Optional Colors</li>
-                        <li>Optional Configurations</li>
-                        <li>5 Yr Warranty</li>
-                    </ul>
-                    <a class="btn btn-primary" href="#">Learn More</a>
-                </div>
-            </div>
-            
-            <div id="item3" class="row justify-content-center no-gutters align-items-center section" style="background-image: url(img/bg2.webp);">
-                <div class="col-md-8 col-sm-10 card_box">
-                    <h3 class="heading">Cargo Worthy</h3>
-                    <div>
-                        <img src="img/c2.png" alt="">
-                    </div>
-                    <ul>
-                        <li>Weathertight &amp; Structurally Sound</li>
-                        <li>Can be used for Cargo</li>
-                        <li>Inspected and repaired</li>
-                        <li>1 Yr Warranty</li>
-                        <li>Cargo Cert Available</li>
-                    </ul>
-                    <a class="btn btn-primary" href="#">Learn More</a>
-                </div>
-            </div>
-            <div id="item4" class="row justify-content-center no-gutters align-items-center section" style="background-image: url(img/bg3.webp);">
-                <div class="col-md-8 col-sm-10 card_box">
-                    <h3 class="heading">Wind &amp; Water Tight</h3>
-                    <div>
-                        <img src="img/c3.webp" alt="">
-                    </div>
-                    <ul>
-                        <li>Door seals intact</li>
-                        <li>No holes</li>
-                        <li>Floor boards intact</li>
-                        <li>Working lock rods</li>
-                        <li>1 Yr Warranty</li>
-                    </ul>
-                    <a class="btn btn-primary" href="#">Learn More</a>
-                </div>
-            </div>
+
         </div>
     </div>
     <!-- fast area -->
     <div class="fast_banner overflow-hidden" style="background-image: url(img/bg4.webp);">
         <div class="container">
             <h2>
-                <span>We always deliver…</span>FAST
-                <img src="img/icon1.webp" alt="" data-aos="zoom-in">
+
+
             </h2>
-            <h4>Get your container in as little as 2-5 days</h4>
-            <a href="#" class="btn btn-primary btn-lg" >Learn More</a>
+            <h1>We Always Offer the Fastes Shipping Available to your Local Area!</h1>
+            <a href="#" class="btn btn-primary btn-lg" >Deliver questions?&nbsp; We're here to help!</a>
             <div>
                 <img src="img/icon-truck-container.png" class="track_img" data-aos="fade-left" alt="">
             </div>
@@ -331,7 +203,7 @@
                         <h3>BUYING YOUR FIRST CONTAINER?</h3>
                     </div>
                     <div class="offer-btn">
-                        <a href="#" class="btn btn-lg btn-primary">We're Here to Help!</a>
+                        <a href="#" class="btn btn-lg btn-primary">Don't go it alone, get it touch!</a>
                     </div>
                 </div>
             </div>
