--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 mt_30">
-                    <img src="img/certified-badge_new.png" class="img-fluid certified_img" alt="">
+                    <img src="https://i.imgur.com/muwfbQ7.png" class="img-fluid certified_img" alt="">
                 </div>
                 <div class="col-lg-4 mt_30">
                     <h2><span>Our Containers</span> Alway Exceed The Industry Standard&nbsp;&nbsp;</h2>
@@ -150,7 +150,7 @@
                                 </p>
                             </div>
                             <div class="text-center">
-                                <a href="https://www.powr.io/contact-form/i/32885053#page" class="btn btn-lg btn-primary">Shop Now</a> 
+
 
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 </p>
                             </div>
                             <div class="text-center">
-                                <a href="https://www.powr.io/contact-form/i/32885053#page" class="btn btn-lg btn-primary">shop now</a> 
+
 
                             </div>
                         </div>
@@ -225,13 +225,12 @@
 </div>      
                     <ul class="footer_menu">
                         <li><a >FAQS</a></li>
-                        <li><a href="#">Will my container smell like poop?</a></li>
-                        <li><a href="#">Will the doors fucking work?</a></li>
-                        <li><a href="#">My forklift fell through the floor</a></li>
+                        <li><a href="#">Faq 1</a></li>
+                        <li><a href="#">Faq 2</a></li>
+                        <li><a href="#">Faq 3</a></li>
                     </ul>
                     <ul class="footer_menu">
                         <li><a>Who We Are&nbsp;</a></li>
-                        <li><a href="#">The Vault Story</a></li>
                         <li><a href="#">Terms of Service</a></li>
                         <li><a href="#">Return Policy</a></li>
                         <li><a href="#">Privacy Policy</a></li>
